--- a/website.rw6/Pages/2-More-stuff/PageAttributes/Contents.plist
+++ b/website.rw6/Pages/2-More-stuff/PageAttributes/Contents.plist
@@ -7,6 +7,8 @@
 		<dict>
 			<key>Dictionary</key>
 			<dict>
+				<key>Changed</key>
+				<true/>
 				<key>ColourStyles</key>
 				<dict>
 					<key>Affero</key>
@@ -34,10 +36,18 @@
 				</dict>
 				<key>CreditRapidWeaver</key>
 				<true/>
+				<key>CustomCopyrightUsed</key>
+				<false/>
+				<key>CustomSiteTitleUsed</key>
+				<false/>
+				<key>CustomSloganUsed</key>
+				<false/>
 				<key>DefaultLinkTarget</key>
 				<string></string>
 				<key>FilenameExtension</key>
 				<string>html</string>
+				<key>FolderName</key>
+				<string>styled</string>
 				<key>HasCustomThemeStyle</key>
 				<false/>
 				<key>ImageFormat</key>
@@ -45,7 +55,7 @@
 				<key>ImageQuality</key>
 				<string>High</string>
 				<key>IndexFilename</key>
-				<string></string>
+				<string>index.html</string>
 				<key>OutputFormat</key>
 				<string>Default</string>
 				<key>OutputXMLDeclaration</key>
